<resources>
    <string name="app_name">Accident Alert System</string>
    <string name="title_activity_maps">Map</string>
    <string name="hospitals">Hospitals</string>
    <string name="school">School</string>
    <string name="mechanics">Mechanics</string>
    <string name="logout">Logout</string>
    <string name="police">Police</string>
    <string name="clinic">Clinic</string>
</resources>
